--- a/css/mobil.CSS
+++ b/css/mobil.CSS
@@ -1,25 +1,14 @@
-.section-movil{
-    max-width: 375px;
-    padding: 0 1rem ;
+.table{
+    background: linear-gradient(313.78deg, #2855AE -3.15%, #7292CF 100%);
+    padding-top: 12.7rem;
 }
 
-/****/
-.section-tarea {
- 
-
-    display: flex;
-    flex-direction: column;
+.primero{
+    width: 12.6rem;
+    margin-left: 9.5rem;
+    margin-top: 2rem;
 }
 
-.imagen2{
-    position: absolute;
-width: 375px;
-height: 385px;
-left: 0px;
-top: 428px;
-}
-.imagen{
-position: absolute;
-left: 124.61px;
-top: 161.13px;    
+.section{
+    margin-top: 18.1rem;
 }
