--- a/css/configuracion global.CSS
+++ b/css/configuracion global.CSS
@@ -1,44 +1,41 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
-
-html {
-   
+html{
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 10px;
 }
+:root{
+    /* variables de color*/
+    --azul1: #345FB4;
+    --azul2: #6789CA;
+    --gris1: #313131;
+    --gris2: #777777;
+    --gris3: #A5A5A5;
+    --gris4: #3A3A3A;
+    --gris5: #777777;
+    --gris6: #F5F6FC;
+    --azul3: #6184C7;
+    --azul4: #5278C1;
+    
 
-
-:root {
-    /* variables de color */
-    --azul :#345FB4 ;
-    --azulclaro:#6789CA;
-    --negro:#313131;
-    --gris :#777777;
-    --grisclaro :#A5A5A5;
-    /* variables de tamaño de letra */
-    --h1 : 25rem;
-    --h2 : 3rem;
-    --h3 : 14rem;
+    /* variables de tamaño*/
+    --h1 : 3.4rem;
+    --h2 : 2.4rem;
+    --h3 : 2rem;
     --parrafo : 1.5rem;
 }
-
-
-/* Estructura de las secciones */
-
-.section {
-   position: absolute;
-width: 375px;
-height: 813px;
-left: 0px;
-top: 0px;
-
-background: linear-gradient(313.78deg, #2855AE -3.15%, #7292CF 100%);
-}
-
-.section-body {
-    max-width: 130rem;
+/*ESTRCUTURA DE LAS SECCIONES*/
+section{
+    max-width: 37.5rem;
     height: auto;
     margin: auto;
+    padding: 5rem 3rem;
+
+    display: flex;
+    flex-direction: column;
+
 }
